--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,11 +1,11 @@
-
 /* ============================================= */
 /*              Base styles                      */
 /* ============================================= */
 
+
 * {
-  font-family: 'Lato', sans-serif;
-  color: #777;
+  font-family: $font-stack-primary;
+  color: $text-color;
   box-sizing: border-box;
 }
 
@@ -22,18 +22,20 @@ a {
 /*              Typography                       */
 /* ============================================= */
 
-.headline-primary {
-  color: #58e1c1;
-  margin-left: 10px;
-}
 
-.headline-secondary {
-  font-weight: 300;
-  color: #777;
-}
+.headline {
+    &-primary {
+      color: $color-primary;
+      margin-left: 10px;
+    }
 
+    &-secondary {
+      font-weight: 300;
+      color: $text-color;
+    }
+}
 .link {
-  color: #51ddfc;
+  color: $color-secondary;
   font-weight: 700;
 }
 
@@ -43,7 +45,7 @@ a {
   font-style: italic;
   margin-left: 20px;
   padding-left: 20px;
-  border-left: 8px solid #58e1c1;
+  border-left: 8px solid $color-primary;
   border-radius: 5px;
 }
 
