--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -2,27 +2,28 @@
 /*              Images                           */
 /* ============================================= */
 
-.img-avatar {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  max-width: 100%; 
-  max-height: 100%;
+%img {
+    @include center;
 }
 
-.img-frame {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  max-width: 100%;
-  padding: 13px;
-  border: 1px solid #ccc;
-}
-
-.img-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.img {
+    &-avatar {
+        margin-top: 10px;
+        max-width: 100%; 
+        max-height: 100%;
+        @extend %img;
+    }
+    
+    &-frame {
+        margin-top: 10px;
+        max-width: 100%;
+        padding: 13px;
+        border: 1px solid #ccc;
+        @extend %img;
+    }
+    
+    &-logo {
+        @extend %img;
+    }
+    
 }
