--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,6 +1,6 @@
-// ----------------------
-// Mixins
-// ----------------------
+// ------------
+//  Mixins
+// ------------
 
 @mixin center {
   display: block;
